--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </p>
       </div>
       <div class="card__actions">
-        <button class="card__actions-heart card__like-button button">
+        <button class="card__actions-heart card__icon-button button">
           <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
             class="like-icon">
             <g class="heart">
@@ -89,12 +89,34 @@
             </defs>
           </svg>
         </button>
-        <button class="card__actions-like button">
-          Like
+        <button class="card__like-button card__actions-like button">
+          <span class="button__text">Like</span>
         </button>
       </div>
     </article>
+    <button class="main__save-button card__actions-like button">
+      <svg class="main__svg" width="21" height="21" viewBox="0 0 40 40">
+        <use href="./svg/floppy.svg#floppy"></use>
+      </svg>
+      <span>
+        Сохранить на память
+      </span>
+    </button>
   </main>
+
+  <dialog class="dialog" id="dialog-id">
+    <div class="dialog__content">
+      <svg class="dialog__floppy-img floppy-img" viewBox="0 0 21 21" aria-hidden="true">
+        <use href="./svg/floppy.svg#floppy"></use>
+      </svg>
+      <p class="dialog__content__text">Вставьте дискету, чтобы продолжить</p>
+      <form class="dialog__content__form" method="dialog">
+        <button class="dialog__button content-button" type="submit" onclick="window['dialog-id'].close()">
+          <span class="button__text">ок</span>
+        </button>
+      </form>
+    </div>
+  </dialog>
   <script src="./scripts/like.js"></script>
 </body>
 
