--- a/index.html
+++ b/index.html
@@ -94,28 +94,26 @@
         </button>
       </div>
     </article>
-    <button class="main__save-button card__actions-like button">
+    <button class="main__save-button card__actions-like button" onclick="window['dialog'].open()">
       <svg class="main__svg" width="21" height="21" viewBox="0 0 40 40">
         <use href="./svg/floppy.svg#floppy"></use>
       </svg>
-      <span>
+      <span class="main__save-button-text">
         Сохранить на память
       </span>
     </button>
   </main>
 
-  <dialog class="dialog" id="dialog-id">
-    <div class="dialog__content">
-      <svg class="dialog__floppy-img floppy-img" viewBox="0 0 21 21" aria-hidden="true">
-        <use href="./svg/floppy.svg#floppy"></use>
-      </svg>
-      <p class="dialog__content__text">Вставьте дискету, чтобы продолжить</p>
-      <form class="dialog__content__form" method="dialog">
-        <button class="dialog__button content-button" type="submit" onclick="window['dialog-id'].close()">
-          <span class="button__text">ок</span>
-        </button>
-      </form>
-    </div>
+  <dialog class="dialog" id="dialog">
+    <svg class="dialog_svg" width="21" height="21" viewBox="0 0 40 40">
+      <use href="./svg/floppy.svg#floppy"></use>
+    </svg>
+    <p class="dialog__-text">Вставьте дискету, чтобы продолжить</p>
+    <form class="dialog__form" method="dialog">
+      <button class="dialog__button button" type="submit" onclick="window['dialog'].close()">
+        <span class="button__text">ок</span>
+      </button>
+    </form>
   </dialog>
   <script src="./scripts/like.js"></script>
 </body>
