git autotests fix

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
           <source srcset="./images/base-image.png" type="image/png">
           <img class="card__image " src="./images/base-image.jpg" loading="lazy"
             alt="Чашка кофе, ноутбук и тетрадь с ручкой">
-          <span class="card__watermark">
+          <p class="card__watermark">
             &lt;/HTML&gt;
-          </span>
+            </span>
         </picture>
       </div>
       <div class="card__text">
@@ -83,7 +83,7 @@
                 fill=none />
             </g>
             <defs>
-              <clipPath id="clip0_4039_768">
+              <clipPath>
                 <rect width="39" height="36" fill="white" />
               </clipPath>
             </defs>
@@ -103,9 +103,9 @@
           <source srcset="./images/base-image.png" type="image/png">
           <img class="card__image card__image_grayscale" src="./images/base-image.jpg" loading="lazy"
             alt="Чашка кофе, ноутбук и тетрадь с ручкой">
-          <span class="card__watermark">
+          <p class="card__watermark">
             &lt;/HTML&gt;
-          </span>
+            </span>
         </picture>
       </div>
       <div class="card__text">
@@ -137,7 +137,7 @@
                 fill=none />
             </g>
             <defs>
-              <clipPath id="clip0_4039_768">
+              <clipPath>
                 <rect width="39" height="36" fill="white" />
               </clipPath>
             </defs>
@@ -157,9 +157,9 @@
           <source srcset="./images/base-image.png" type="image/png">
           <img class="card__image card__image_saturate" src="./images/base-image.jpg" loading="lazy"
             alt="Чашка кофе, ноутбук и тетрадь с ручкой">
-          <span class="card__watermark">
+          <p class="card__watermark">
             &lt;CSS&gt;
-          </span>
+            </span>
         </picture>
       </div>
       <div class="card__text">
@@ -190,7 +190,7 @@
                 fill=none />
             </g>
             <defs>
-              <clipPath id="clip0_4039_768">
+              <clipPath>
                 <rect width="39" height="36" fill="white" />
               </clipPath>
             </defs>
@@ -210,9 +210,9 @@
           <source srcset="./images/base-image.png" type="image/png">
           <img class="card__image card__image_hue-rotate" src="./images/base-image.jpg" loading="lazy"
             alt="Чашка кофе, ноутбук и тетрадь с ручкой">
-          <span class="card__watermark">
+          <p class="card__watermark">
             &lt;desigions&gt;
-          </span>
+            </span>
         </picture>
       </div>
       <div class="card__text">
@@ -244,7 +244,7 @@
                 fill=none />
             </g>
             <defs>
-              <clipPath id="clip0_4039_768">
+              <clipPath>
                 <rect width="39" height="36" fill="white" />
               </clipPath>
             </defs>
@@ -264,9 +264,9 @@
           <source srcset="./images/base-image.png" type="image/png">
           <img class="card__image card__image_invert" src="./images/base-image.jpg" loading="lazy"
             alt="Чашка кофе, ноутбук и тетрадь с ручкой">
-          <span class="card__watermark">
+          <p class="card__watermark">
             care
-          </span>
+            </span>
         </picture>
       </div>
       <div class="card__text">
@@ -299,7 +299,7 @@
                 fill=none />
             </g>
             <defs>
-              <clipPath id="clip0_4039_768">
+              <clipPath>
                 <rect width="39" height="36" fill="white" />
               </clipPath>
             </defs>
@@ -319,9 +319,9 @@
           <source srcset="./images/base-image.png" type="image/png">
           <img class="card__image card__image_sepia" src="./images/base-image.jpg" loading="lazy"
             alt="Чашка кофе, ноутбук и тетрадь с ручкой">
-          <span class="card__watermark">
+          <p class="card__watermark">
             &lt;support&gt;
-          </span>
+            </span>
         </picture>
       </div>
       <div class="card__text">
@@ -352,7 +352,7 @@
                 fill=none />
             </g>
             <defs>
-              <clipPath id="clip0_4039_768">
+              <clipPath>
                 <rect width="39" height="36" fill="white" />
               </clipPath>
             </defs>
@@ -372,9 +372,9 @@
           <source srcset="./images/base-image.png" type="image/png">
           <img class="card__image card__image_blur" src="./images/base-image.jpg" loading="lazy"
             alt="Чашка кофе, ноутбук и тетрадь с ручкой">
-          <span class="card__watermark">
+          <p class="card__watermark">
             &lt;lifes-style: none;&gt;
-          </span>
+            </span>
         </picture>
       </div>
       <div class="card__text">
@@ -406,7 +406,7 @@
                 fill=none />
             </g>
             <defs>
-              <clipPath id="clip0_4039_768">
+              <clipPath>
                 <rect width="39" height="36" fill="white" />
               </clipPath>
             </defs>
@@ -426,9 +426,9 @@
           <source srcset="./images/base-image.png" type="image/png">
           <img class="card__image card__image_hue-rotate-blur" src="./images/base-image.jpg" loading="lazy"
             alt="Чашка кофе, ноутбук и тетрадь с ручкой">
-          <span class="card__watermark">
+          <p class="card__watermark">
             &lt;experience&gt;
-          </span>
+            </span>
         </picture>
       </div>
       <div class="card__text">
@@ -461,7 +461,7 @@
                 fill=none />
             </g>
             <defs>
-              <clipPath id="clip0_4039_768">
+              <clipPath>
                 <rect width="39" height="36" fill="white" />
               </clipPath>
             </defs>
