git autotests fix 2

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
           <source srcset="./images/base-image.png" type="image/png">
           <img class="card__image " src="./images/base-image.jpg" loading="lazy"
             alt="Чашка кофе, ноутбук и тетрадь с ручкой">
-          <p class="card__watermark">
-            &lt;/HTML&gt;
-            </span>
         </picture>
+        <span class="card__watermark">
+          &lt;/HTML&gt;
+        </span>
       </div>
       <div class="card__text">
         <p class="card__text-paragraph">
@@ -103,10 +103,10 @@
           <source srcset="./images/base-image.png" type="image/png">
           <img class="card__image card__image_grayscale" src="./images/base-image.jpg" loading="lazy"
             alt="Чашка кофе, ноутбук и тетрадь с ручкой">
-          <p class="card__watermark">
-            &lt;/HTML&gt;
-            </span>
         </picture>
+        <span class="card__watermark">
+          &lt;/HTML&gt;
+        </span>
       </div>
       <div class="card__text">
         <p class="card__text-paragraph">
@@ -157,10 +157,10 @@
           <source srcset="./images/base-image.png" type="image/png">
           <img class="card__image card__image_saturate" src="./images/base-image.jpg" loading="lazy"
             alt="Чашка кофе, ноутбук и тетрадь с ручкой">
-          <p class="card__watermark">
-            &lt;CSS&gt;
-            </span>
         </picture>
+        <span class="card__watermark">
+          &lt;CSS&gt;
+        </span>
       </div>
       <div class="card__text">
         <p class="card__text-paragraph">
@@ -210,10 +210,10 @@
           <source srcset="./images/base-image.png" type="image/png">
           <img class="card__image card__image_hue-rotate" src="./images/base-image.jpg" loading="lazy"
             alt="Чашка кофе, ноутбук и тетрадь с ручкой">
-          <p class="card__watermark">
-            &lt;desigions&gt;
-            </span>
         </picture>
+        <span class="card__watermark">
+          &lt;desigions&gt;
+        </span>
       </div>
       <div class="card__text">
         <p class="card__text-paragraph">
@@ -264,10 +264,10 @@
           <source srcset="./images/base-image.png" type="image/png">
           <img class="card__image card__image_invert" src="./images/base-image.jpg" loading="lazy"
             alt="Чашка кофе, ноутбук и тетрадь с ручкой">
-          <p class="card__watermark">
-            care
-            </span>
         </picture>
+        <span class="card__watermark">
+          care
+        </span>
       </div>
       <div class="card__text">
         <p class="card__text-paragraph">
@@ -319,10 +319,10 @@
           <source srcset="./images/base-image.png" type="image/png">
           <img class="card__image card__image_sepia" src="./images/base-image.jpg" loading="lazy"
             alt="Чашка кофе, ноутбук и тетрадь с ручкой">
-          <p class="card__watermark">
-            &lt;support&gt;
-            </span>
         </picture>
+        <span class="card__watermark">
+          &lt;support&gt;
+        </span>
       </div>
       <div class="card__text">
         <p class="card__text-paragraph">
@@ -372,10 +372,10 @@
           <source srcset="./images/base-image.png" type="image/png">
           <img class="card__image card__image_blur" src="./images/base-image.jpg" loading="lazy"
             alt="Чашка кофе, ноутбук и тетрадь с ручкой">
-          <p class="card__watermark">
-            &lt;lifes-style: none;&gt;
-            </span>
         </picture>
+        <span class="card__watermark">
+          &lt;lifes-style: none;&gt;
+        </span>
       </div>
       <div class="card__text">
         <p class="card__text-paragraph">
@@ -426,10 +426,10 @@
           <source srcset="./images/base-image.png" type="image/png">
           <img class="card__image card__image_hue-rotate-blur" src="./images/base-image.jpg" loading="lazy"
             alt="Чашка кофе, ноутбук и тетрадь с ручкой">
-          <p class="card__watermark">
-            &lt;experience&gt;
-            </span>
         </picture>
+        <span class="card__watermark">
+          &lt;experience&gt;
+        </span>
       </div>
       <div class="card__text">
         <p class="card__text-paragraph">
