first review fixes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="color-scheme" content="dark light">
   <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./images/favicon.png">
   <title>Закрывающий тег</title>
   <link rel="stylesheet" href="./fonts/fonts.css" />
   <link rel="stylesheet" href="./styles/variables.css" />
@@ -18,8 +19,8 @@
 
 <body class="page">
   <header class="header content">
-    <h1 class='header__title'>&lt;/html&gt;</h1>
-    <p class="header__subtitle">закрывающий тег</p>
+    <a href="#" class='header__title'>&lt;/html&gt;</a>
+    <h1 class="header__subtitle">закрывающий тег</h1>
     <nav class="theme-menu header__theme-menu">
       <ul class="theme-menu__list">
         <li class="theme-menu__item">
@@ -65,9 +66,9 @@
         </p>
       </div>
       <div class="card__actions">
-        <button class="card__actions-heart card__icon-button button">
+        <button type="button" class="card__actions-heart card__icon-button button">
           <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
-            class="like-icon">
+            aria-hidden="true" class="like-icon">
             <g class="heart">
               <path class="contour"
                 d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z"
@@ -82,14 +83,9 @@
                 d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                 fill=none />
             </g>
-            <defs>
-              <clipPath>
-                <rect width="39" height="36" fill="white" />
-              </clipPath>
-            </defs>
           </svg>
         </button>
-        <button class="card__like-button card__button button">
+        <button type="button" class="card__like-button card__button button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -119,7 +115,7 @@
         </p>
       </div>
       <div class="card__actions">
-        <button class="card__actions-heart card__icon-button button">
+        <button type="button" class="card__actions-heart card__icon-button button">
           <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
             class="like-icon">
             <g class="heart">
@@ -136,14 +132,9 @@
                 d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                 fill=none />
             </g>
-            <defs>
-              <clipPath>
-                <rect width="39" height="36" fill="white" />
-              </clipPath>
-            </defs>
           </svg>
         </button>
-        <button class="card__like-button card__button button">
+        <button type="button" class="card__like-button card__button button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -172,7 +163,7 @@
         </p>
       </div>
       <div class="card__actions">
-        <button class="card__actions-heart card__icon-button button">
+        <button type="button" class="card__actions-heart card__icon-button button">
           <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
             class="like-icon">
             <g class="heart">
@@ -189,14 +180,9 @@
                 d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                 fill=none />
             </g>
-            <defs>
-              <clipPath>
-                <rect width="39" height="36" fill="white" />
-              </clipPath>
-            </defs>
           </svg>
         </button>
-        <button class="card__like-button card__button button">
+        <button type="button" class="card__like-button card__button button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -226,7 +212,7 @@
         </p>
       </div>
       <div class="card__actions">
-        <button class="card__actions-heart card__icon-button button">
+        <button type="button" class="card__actions-heart card__icon-button button">
           <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
             class="like-icon">
             <g class="heart">
@@ -243,14 +229,9 @@
                 d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                 fill=none />
             </g>
-            <defs>
-              <clipPath>
-                <rect width="39" height="36" fill="white" />
-              </clipPath>
-            </defs>
           </svg>
         </button>
-        <button class="card__like-button card__button button">
+        <button type="button" class="card__like-button card__button button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -281,7 +262,7 @@
         </p>
       </div>
       <div class="card__actions">
-        <button class="card__actions-heart card__icon-button button">
+        <button type="button" class="card__actions-heart card__icon-button button">
           <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
             class="like-icon">
             <g class="heart">
@@ -298,14 +279,9 @@
                 d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                 fill=none />
             </g>
-            <defs>
-              <clipPath>
-                <rect width="39" height="36" fill="white" />
-              </clipPath>
-            </defs>
           </svg>
         </button>
-        <button class="card__like-button card__button button">
+        <button type="button" class="card__like-button card__button button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -334,7 +310,7 @@
         </p>
       </div>
       <div class="card__actions">
-        <button class="card__actions-heart card__icon-button button">
+        <button type="button" class="card__actions-heart card__icon-button button">
           <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
             class="like-icon">
             <g class="heart">
@@ -351,14 +327,9 @@
                 d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                 fill=none />
             </g>
-            <defs>
-              <clipPath>
-                <rect width="39" height="36" fill="white" />
-              </clipPath>
-            </defs>
           </svg>
         </button>
-        <button class="card__like-button card__button button">
+        <button type="button" class="card__like-button card__button button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -388,7 +359,7 @@
         </p>
       </div>
       <div class="card__actions">
-        <button class="card__actions-heart card__icon-button button">
+        <button type="button" class="card__actions-heart card__icon-button button">
           <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
             class="like-icon">
             <g class="heart">
@@ -405,14 +376,9 @@
                 d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                 fill=none />
             </g>
-            <defs>
-              <clipPath>
-                <rect width="39" height="36" fill="white" />
-              </clipPath>
-            </defs>
           </svg>
         </button>
-        <button class="card__like-button card__button button">
+        <button type="button" class="card__like-button card__button button">
           <span class="button__text">Like</span>
         </button>
       </div>
@@ -443,7 +409,7 @@
         </p>
       </div>
       <div class="card__actions">
-        <button class="card__actions-heart card__icon-button button">
+        <button type="button" class="card__actions-heart card__icon-button button">
           <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
             class="like-icon">
             <g class="heart">
@@ -460,20 +426,15 @@
                 d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                 fill=none />
             </g>
-            <defs>
-              <clipPath>
-                <rect width="39" height="36" fill="white" />
-              </clipPath>
-            </defs>
           </svg>
         </button>
-        <button class="card__like-button card__button button">
+        <button type="button" class="card__like-button card__button button">
           <span class="button__text">Like</span>
         </button>
       </div>
     </article>
-    <button class="main__save-button card__button button" onclick="window.dialog.showModal()">
-      <svg class="main__svg" width="21" height="21" viewBox="0 0 21 21">
+    <button type="button" class="main__save-button card__button button" onclick="window.dialog.showModal()">
+      <svg class="main__svg" viewBox="0 0 21 21">
         <use href="./svg/floppy.svg#floppy"></use>
       </svg>
       <span class="main__save-button-text button__text">
@@ -488,7 +449,7 @@
     </svg>
     <p class="dialog__-text">Вставьте дискету, чтобы продолжить</p>
     <form class="dialog__form" method="dialog">
-      <button class="dialog__button card__button button" type="submit" onclick="window.dialog.close()">
+      <button type="button" class="dialog__button card__button button" type="submit" onclick="window.dialog.close()">
         <span class="button__text">ок</span>
       </button>
     </form>
