--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
     </svg>
     <p class="dialog__-text">Вставьте дискету, чтобы продолжить</p>
     <form class="dialog__form" method="dialog">
-      <button type="button" class="dialog__button card__button button" onclick="window.dialog.close()">
+      <button type="submit" class="dialog__button card__button button" onclick="window.dialog.close()">
         <span class="button__text">ок</span>
       </button>
     </form>
